--- a/package.json
+++ b/package.json
@@ -9,21 +9,22 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@emotion/react": "^11.13.5",
-		"@emotion/styled": "^11.13.5",
-		"@mui/material": "^6.1.10",
-		"axios": "^1.7.7",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@mui/material": "^6.2.0",
+		"axios": "^1.7.9",
 		"classnames": "^2.5.1",
 		"framer-motion": "^11.11.17",
-		"next": "15.0.3",
+		"next": "^15.0.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"react-hook-form": "^7.53.2",
+		"react-hook-form": "^7.54.1",
 		"react-icons": "^5.3.0",
 		"react-input-mask": "^2.0.4",
 		"react-select": "^5.8.3",
 		"react-text-mask": "^5.5.0",
-		"swiper": "^11.1.14"
+		"swiper": "^11.1.14",
+		"zustand": "^5.0.2"
 	},
 	"devDependencies": {
 		"eslint": "^8",
