--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   mongodb:
-    image: mongo:latest
+    image: mongo:6.0.13
     ports:
       - '27017:27017'
     volumes:
