--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,41 @@
-events {}
+events {
+    worker_connections 1024;
+}
 
 http {
+    # Basic settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    # Logging configuration
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log debug;
+
     map $http_origin $cors {
         default "";
         ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
+        "http://localhost" $http_origin;  # Allow localhost for development
     }
 
     upstream nextjs {
         server nextjs-app:3000;
+        keepalive 32;  # Keep connections alive
     }
+
+    # HTTP server (redirect to HTTPS)
     server {
         listen 80;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
-        return 301 https://$host$request_uri;
-    }
-    server {
-        listen 443 ssl;
-        server_name cvirko-vadim.ru *.cvirko-vadim.ru;  # Все поддомены и основной домен
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru localhost;
+        
+        # For production domains, redirect to HTTPS
+        if ($host ~ ^(cvirko-vadim\.ru|.*\.cvirko-vadim\.ru)$) {
+            return 301 https://$host$request_uri;
+        }
 
-        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
-
-        # Прокси на Next.js приложение
+        # For localhost/development, proceed with HTTP
         location / {
             proxy_pass http://nextjs;
             proxy_http_version 1.1;
@@ -29,6 +43,42 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            
+            # Increase timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+
+        # SSL configuration
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+
+        location / {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            
+            # Increase timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
 
             add_header Access-Control-Allow-Origin $cors always;
             add_header Access-Control-Allow-Credentials "true" always;
