--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
       - '443:443'
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./certs:/etc/letsencrypt
+      - /etc/letsencrypt:/etc/letsencrypt:ro
       - ./www:/var/www/certbot
     depends_on:
       - nextjs-app
