--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,10 @@ services:
     environment:
       - MONGODB_URI=mongodb://mongodb:27017/bartech
       - NODE_ENV=production
-      - NEXT_PUBLIC_API_URL=http://localhost:3000
+      - NEXT_PUBLIC_API_URL=https://cvirko-vadim.ru
     volumes:
       - nextjs_build:/app/.next
+      - ./data:/app/data:ro
     depends_on:
       mongodb:
         condition: service_healthy
