--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,15 @@ services:
     command: sh docker-init.sh
     restart: always
 
+  certbot:
+    image: certbot/certbot:latest
+    volumes:
+      - /etc/letsencrypt:/etc/letsencrypt
+      - ./www:/var/www/certbot
+    command: certonly --standalone --preferred-challenges http --email your-email@example.com --agree-tos --no-eff-email -d cvirko-vadim.ru -d www.cvirko-vadim.ru --force-renewal
+    ports:
+      - "80:80"
+
   nginx:
     image: nginx:latest
     ports:
@@ -41,15 +50,9 @@ services:
       - ./logs/nginx:/var/log/nginx
       - ./www:/var/www/certbot
     depends_on:
+      - certbot
       - nextjs-app
     restart: always
-
-  certbot:
-    image: certbot/certbot:latest
-    volumes:
-      - /etc/letsencrypt:/etc/letsencrypt
-      - ./www:/var/www/certbot
-    command: certonly --webroot --webroot-path=/var/www/certbot --email your-email@example.com --agree-tos --no-eff-email -d cvirko-vadim.ru -d www.cvirko-vadim.ru --force-renewal
 
 volumes:
   mongodb_data:
