--- a/nginx.conf
+++ b/nginx.conf
@@ -30,6 +30,11 @@ http {
         listen 80;
         server_name cvirko-vadim.ru *.cvirko-vadim.ru localhost;
         
+        # Certbot challenge location
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
         # For production domains, redirect to HTTPS
         if ($host ~ ^(cvirko-vadim\.ru|.*\.cvirko-vadim\.ru)$) {
             return 301 https://$host$request_uri;
