--- a/nginx.conf
+++ b/nginx.conf
@@ -14,22 +14,86 @@ http {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log debug;
 
-    # HTTP server
+    map $http_origin $cors {
+        default "";
+        ~^https?://(.*\.cvirko-vadim\.ru|cvirko-vadim\.ru)$ $http_origin;
+        "http://localhost" $http_origin;  # Allow localhost for development
+    }
+
+    upstream nextjs {
+        server nextjs-app:3000;
+        keepalive 32;  # Keep connections alive
+    }
+
+    # HTTP server (redirect to HTTPS)
     server {
         listen 80;
-        listen [::]:80;
-        server_name cvirko-vadim.ru www.cvirko-vadim.ru;
-
-        # Allow ACME challenge
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-            try_files $uri =404;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru localhost;
+        
+        # For production domains, redirect to HTTPS
+        if ($host ~ ^(cvirko-vadim\.ru|.*\.cvirko-vadim\.ru)$) {
+            return 301 https://$host$request_uri;
         }
 
-        # Temporary configuration - just return 200 OK
+        # For localhost/development, proceed with HTTP
         location / {
-            return 200 'OK';
-            add_header Content-Type text/plain;
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            
+            # Increase timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl;
+        server_name cvirko-vadim.ru *.cvirko-vadim.ru;
+
+        # SSL configuration
+        ssl_certificate /etc/letsencrypt/live/cvirko-vadim.ru/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/cvirko-vadim.ru/privkey.pem;
+        ssl_session_timeout 1d;
+        ssl_session_cache shared:SSL:50m;
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+
+        location / {
+            proxy_pass http://nextjs;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            
+            # Increase timeouts
+            proxy_connect_timeout 60s;
+            proxy_send_timeout 60s;
+            proxy_read_timeout 60s;
+
+            add_header Access-Control-Allow-Origin $cors always;
+            add_header Access-Control-Allow-Credentials "true" always;
+        }
+
+        location /_next/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
+        }
+
+        location /static/ {
+            proxy_pass http://nextjs;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header Host $host;
         }
     }
 }
