--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,7 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt
       - ./www:/var/www/certbot
     command: certonly --standalone --preferred-challenges http --email your-email@example.com --agree-tos --no-eff-email -d cvirko-vadim.ru -d www.cvirko-vadim.ru --force-renewal
-    ports:
-      - "80:80"
+    network_mode: host
 
   nginx:
     image: nginx:latest
