--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
 		"lint": "next lint",
 		"init-db": "node src/scripts/init-categories.mjs && node src/scripts/init-phones.mjs",
 		"seed": "node src/scripts/init-phones.mjs"
-
 	},
 	"dependencies": {
 		"@emotion/react": "^11.14.0",
@@ -29,10 +28,12 @@
 		"react-input-mask": "^2.0.4",
 		"react-select": "^5.8.3",
 		"react-text-mask": "^5.5.0",
+		"styled-components": "^6.1.13",
 		"swiper": "^11.1.15",
 		"zustand": "^5.0.2"
 	},
 	"devDependencies": {
+		"babel-plugin-styled-components": "^2.1.4",
 		"eslint": "^8",
 		"eslint-config-next": "15.0.3"
 	}
