--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@mui/material": "^6.2.0",
 		"axios": "^1.7.9",
 		"classnames": "^2.5.1",
+		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.7",
 		"framer-motion": "^11.11.17",
 		"next": "^15.0.3",
