--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -83,6 +83,30 @@ http {
             proxy_cache_bypass $http_upgrade;
             proxy_read_timeout 300s;
             proxy_connect_timeout 75s;
+            
+            # Отключаем кеширование для HTML страниц (чтобы изменения были видны сразу)
+            proxy_hide_header Cache-Control;
+            add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+            add_header Pragma "no-cache" always;
+            add_header Expires "0" always;
+        }
+        
+        # Кеширование статических файлов Next.js (JS, CSS, изображения)
+        location /_next/static/ {
+            proxy_pass http://nextjs:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_valid 200 365d;
+            add_header Cache-Control "public, immutable, max-age=31536000" always;
+        }
+        
+        # Кеширование изображений из public
+        location ~* \.(jpg|jpeg|png|gif|ico|svg|webp)$ {
+            proxy_pass http://nextjs:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+            proxy_cache_valid 200 30d;
+            add_header Cache-Control "public, max-age=2592000" always;
         }
 
         # Health check endpoint
