--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' || github.event_name == 'workflow_dispatch' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
     env:
       SSH_USER: ${{ secrets.SSH_USER }}
       SERVER_HOST: ${{ secrets.SERVER_HOST }}
